@@ -5,6 +5,7 @@ This file documents the revision history for Perl extension Mojolicious.
     Mojolicious version.
   - Improved documentation.
   - Fixed HTTPS proxy support in Mojo::UserAgent.
+  - Fixed multiple Mojo::UserAgent::Transactor bugs.
 
 2.78  2012-04-09
   - Improved Mojolicious::Routes to allow redispatching controllers.
